# modules

./: .gitignore  CMakeLists.txt  README.md  hello.cc  main.cc  mapper.cmake  modules.cmake  test.cc
.github/workflows/: linux.yml  test_helloworld.cmake  windows.yml
cmake/: modules.cmake
example/: CMakeLists.txt  hello.cc  hello_fallback.cc  main.cc  main_fallback.cc  main_module.cc
example/include/: hello.h
